// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Axios should DELETE 1`] = `
Object {
  "data": Object {},
  "headers": Object {},
  "status": undefined,
  "statusText": undefined,
}
`;

exports[`Axios should DELETE 2`] = `
Array [
  Array [
    Object {
      "data": undefined,
      "headers": undefined,
      "method": "delete",
      "params": undefined,
      "url": "http://localhost/delete/path",
    },
  ],
]
`;

exports[`Axios should GET 1`] = `
Object {
  "data": Object {},
  "headers": Object {},
  "status": undefined,
  "statusText": undefined,
}
`;

exports[`Axios should GET 2`] = `
Array [
  Array [
    Object {
      "data": undefined,
      "headers": undefined,
      "method": "get",
      "params": Object {
        "param1": true,
      },
      "url": "http://localhost/get/path",
    },
  ],
]
`;

exports[`Axios should PATCH 1`] = `
Object {
  "data": Object {},
  "headers": Object {},
  "status": undefined,
  "statusText": undefined,
}
`;

exports[`Axios should PATCH 2`] = `
Array [
  Array [
    Object {
      "data": Object {
        "data": true,
      },
      "headers": undefined,
      "method": "patch",
      "params": undefined,
      "url": "http://localhost/patch/path",
    },
  ],
]
`;

exports[`Axios should POST 1`] = `
Object {
  "data": Object {},
  "headers": Object {},
  "status": undefined,
  "statusText": undefined,
}
`;

exports[`Axios should POST 2`] = `
Array [
  Array [
    Object {
      "data": Object {
        "data": true,
      },
      "headers": undefined,
      "method": "post",
      "params": undefined,
      "url": "http://localhost/post/path",
    },
  ],
]
`;

exports[`Axios should PUT 1`] = `
Object {
  "data": Object {},
  "headers": Object {},
  "status": undefined,
  "statusText": undefined,
}
`;

exports[`Axios should PUT 2`] = `
Array [
  Array [
    Object {
      "data": Object {
        "data": true,
      },
      "headers": undefined,
      "method": "put",
      "params": undefined,
      "url": "http://localhost/put/path",
    },
  ],
]
`;

exports[`Axios should use and prioritize bearer auth 1`] = `
Object {
  "data": Object {},
  "headers": Object {},
  "status": undefined,
  "statusText": undefined,
}
`;

exports[`Axios should use and prioritize bearer auth 2`] = `
Array [
  Array [
    Object {
      "data": undefined,
      "headers": undefined,
      "method": "get",
      "params": undefined,
      "url": "http://localhost/get/path",
    },
  ],
]
`;

exports[`Axios should use base url 1`] = `
Object {
  "data": Object {},
  "headers": Object {},
  "status": undefined,
  "statusText": undefined,
}
`;

exports[`Axios should use base url 2`] = `
Array [
  Array [
    Object {
      "data": undefined,
      "headers": undefined,
      "method": "get",
      "params": undefined,
      "url": "http://localhost/get/path",
    },
  ],
]
`;

exports[`Axios should use basic auth 1`] = `
Object {
  "data": Object {},
  "headers": Object {},
  "status": undefined,
  "statusText": undefined,
}
`;

exports[`Axios should use basic auth 2`] = `
Array [
  Array [
    Object {
      "data": undefined,
      "headers": undefined,
      "method": "get",
      "params": undefined,
      "url": "http://localhost/get/path",
    },
  ],
]
`;
